fixed - tablet-headlines #fafafa, header z-index up, litle fixes

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -362,7 +362,9 @@
             
             .headline
             {
+                margin-top: 15%;
                 font-size: 3.5em;
+                /* color: #fafafa; */
             }
         }
         
