--- a/assets/css/courses.css
+++ b/assets/css/courses.css
@@ -348,6 +348,12 @@
 
         
         @media only screen and (max-width: 768px) {
+
+            .location-headline
+            {
+                margin-top: 15%;
+                color: #fafafa;
+            }
             
             .main-cont
             {
