--- a/assets/css/member.css
+++ b/assets/css/member.css
@@ -484,6 +484,7 @@
             .headline
             {
                 font-size: 3.5em;
+                color: #fafafa;
             }
             
             .member-card-cont-main
